<resources>
    <string name="app_name">Grocezilla</string>
    <string name="welcomeback">Welcome Back</string>
    <string name="signin">Sign in to continue</string>
    <string name="email_string">Email</string>
    <string name="groce_zilla_com_string">groce@zilla.com</string>
    <string name="password_string">Password</string>
    <string name="password_ek1_string">Password</string>
    <string name="checkbox_string">Remember me</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="don_t_have_account__string">Dont have account?</string>
    <string name="create">Create a new account</string>
    <string name="login_string">LOGIN</string>
    <string name="login">LOGIN</string>
    <string name="awesome">Awesome</string>
    <string name="your_safe_place_to_record_and_reflect">Your safe place to record and reflect</string>
    <string name="todo">TODO</string>
    <string name="guided_journals">Guided Journals</string>
    <string name="reflect_on_where_you_re_at">Reflect on&#10;where you\'re&#10;at </string>
    <string name="your_task_and_objectives">Your task and objectives</string>
    <string name="today_s_task">Today\'s Task</string>
    <string name="start_to_be_organized_and_be_on_track">Start to be &#10;organized and &#10;be on track</string>
    <string name="receiver">Le Bronn&#10;Samson</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="email">Email</string>
    <string name="det">Add a pinch of flavor to your culinary creations &#10;with our high-quality salt. Made from premium &#10;ingredients and carefully processed, our salt is &#10;a must-have for every kitchen.</string>
    <string name="sm_supermarket">SM Supermarket\nLanders\nRustan\'s Marketplace\nS&amp;R</string>
    <string name="revi">Grocezilla best app 2023!</string>
    <string name="are_you_sure_you_want_to_delete_task_this_action_cannot_be_undone_and_you_will_not_be_able_to_recover_the_data">Are you sure you want to delete task? \n\n You can\'t undo this action.</string>
    <string name="interact_with_an_ai_assistant_that_is_ready_to_assist_you_with_your_grocery_or_task_related_needs">Interact with an AI assistant that \nis ready to assist you with your grocery or task-related needs.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure_you_want_to_delete_this_review_n_n_you_can_t_undo_this_action">Are you sure you want to delete this review?\n\n You can\'t undo this action.</string>
</resources>